# speakAI

./: README.md  description.md  footer.md  head.html  main.py  pyproject.toml
.github/workflows/: docker-image.yml
examples/: AI_To_Replace_Doctors_Teachers.txt
