[project]
name = "speakai"
version = "0.1.0"
description = "Generates natural-sounding audio from text, image, or document using AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3", # Added
    "fastapi>=0.111.0",        # Added
    "gradio>=5.5.0",
    "loguru>=0.7.2",
    "openai>=1.25.0",          # Replaced google-generativeai
    "promptic>=0.7.7",
    "pydantic>=2.9.2",
    "pypdf>=5.0.1",
    "python-docx>=0.8.11",
    "requests>=2.32.0",        # Added
    "sentry-sdk>=2.16.0",
    "tenacity>=9.0.0",
    "uvicorn>=0.32.0", # For running the FastAPI app
    "pytz>=2024.1", # Added for timezone support
]
